updated yaml api specification
